WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
81381
REGRESSION (
r110737
): Height element changes on scrolled page causes failure
https://bugs.webkit.org/show_bug.cgi?id=81381
Summary
REGRESSION (r110737): Height element changes on scrolled page causes failure
Chris Silverberg
Reported
2012-03-16 11:50:22 PDT
Changing the height of an element while a page is scrolled can cause havoc on the page layout, sometimes causing it to disappear from view. This appears to be caused by this change:
http://trac.webkit.org/changeset/110737/trunk/Source/WebCore/platform/ScrollView.cpp
I've attached a reduction case that should make it easy to reproduce. This occurs on both WebKit nightlies and Chromium trunk builds. Reproduction steps: 1. Open attached page in a browser window. 2. Click on the "Toggle Stuff" link at the bottom. 3. If there is no scrollbar visible, make the window smaller so that the scrollbar appears. 4. Scroll down to the bottom and click "Toggle Stuff" again. At this point you should see a broken rendering... typically all page content will be gone (or at least, not visible in the layout.)
Attachments
Reproduction case
(2.59 KB, text/html)
2012-03-16 11:50 PDT
,
Chris Silverberg
no flags
Details
Patch
(5.26 KB, patch)
2012-03-16 18:00 PDT
,
Anders Carlsson
sam
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Chris Silverberg
Comment 1
2012-03-16 11:50:50 PDT
Created
attachment 132334
[details]
Reproduction case
Alexey Proskuryakov
Comment 2
2012-03-16 14:08:57 PDT
<
rdar://problem/11066006
>
Dan Beam
Comment 3
2012-03-16 15:22:15 PDT
Do you think it'd be possible to revert the original change (110737) and re-apply when the root issue is discovered? We've gotten 10 bugs today so far all stemming from this (and those are just the ones I know about), :(.
Anders Carlsson
Comment 4
2012-03-16 17:18:25 PDT
(In reply to
comment #3
)
> Do you think it'd be possible to revert the original change (110737) and re-apply when the root issue is discovered? We've gotten 10 bugs today so far all stemming from this (and those are just the ones I know about), :(.
I'm working on a fix right now.
Anders Carlsson
Comment 5
2012-03-16 18:00:02 PDT
Created
attachment 132430
[details]
Patch
Anders Carlsson
Comment 6
2012-03-16 18:21:44 PDT
Committed
r111102
: <
http://trac.webkit.org/changeset/111102
>
Chris Silverberg
Comment 7
2012-03-16 18:56:19 PDT
Anders, this patch partially fixes the issue (indeed it fixes it for the reproduction case I posted above), but there are still cases where the scrollbar disappears when it shouldn't. I'll work on a followup reproduction case and attach it tonight.
Chris Silverberg
Comment 8
2012-03-18 22:12:10 PDT
Anders... the issue I was experiencing on Friday evening appears to be gone now. So this looks like a complete fix. Thank you for your quick response!
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug