REGRESSION (r110737): Height element changes on scrolled page causes failure https://bugs.webkit.org/show_bug.cgi?id=81381 <rdar://problem/11066006>

Reviewed by Sam Weinig.

Limit the fix made in r110737 to check if there's a rubber-band gesture in progress and only ignore the range if that is the case.

* platform/ScrollAnimator.h:
(WebCore::ScrollAnimator::isRubberBandInProgress):
(ScrollAnimator):
* platform/ScrollView.cpp:
(WebCore::ScrollView::updateScrollbars):
* platform/mac/ScrollAnimatorMac.h:
(ScrollAnimatorMac):
* platform/mac/ScrollAnimatorMac.mm:
(WebCore::ScrollAnimatorMac::isRubberBandInProgress):
(WebCore):
* platform/mac/ScrollElasticityController.h:
(ScrollElasticityController):
* platform/mac/ScrollElasticityController.mm:
(WebCore::ScrollElasticityController::isRubberBandInProgress):
(WebCore):

Canonical link: https://commits.webkit.org/98649@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@111102 268f45cc-cd09-0410-ab3c-d52691b4dbfc